--- a/StyreneAWeb.html
+++ b/StyreneAWeb.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Styrene A Web</title>
     <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="icon" type="image/png" href="Images/Favicon.png" />
   </head>
   <body>
     <!-- первый блок -->
